--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>HTML Tutorial</title>
+<title>Buddhiman Studios</title>
 <body>
 
 <h1>This is a heading Ashwin</h1>
