--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
   <nav class="flex items-center bg-gray-800 p-3 flex-wrap">
     <a href="index.html" class="p-2 mr-4 inline-flex items-center">
-      <img src="images/learnishLogo.JPG" alt="" style="height: 45px;">
-      <!-- <span class="text-xl text-white font-bold uppercase tracking-wide"> Learnish Academy</span> -->
+                <span class="material-icons"> school </span>
+      <span class="text-xl text-white font-bold uppercase tracking-wide"> Learnish Academy</span>
     </a>
     <button
       class="text-white inline-flex p-3 hover:bg-gray-900 rounded lg:hidden ml-auto hover:text-white outline-none nav-toggler"
